tests/baselines/reference/noImplicitAnyMissingGetAccessor.errors.txt
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(4,25): error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(4,33): error TS7006: Parameter 'str' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(9,16): error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(9,24): error TS7006: Parameter 'str' implicitly has an 'any' type.


==== tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts (4 errors) ====
    
    abstract class Parent
    {
        public abstract set message(str);
                            ~~~~~~~
!!! error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                                    ~~~
!!! error TS7006: Parameter 'str' implicitly has an 'any' type.
    }
    
    class Child extends Parent {
        _x: any;
        public set message(str) {
                   ~~~~~~~
!!! error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                           ~~~
!!! error TS7006: Parameter 'str' implicitly has an 'any' type.
            this._x = str;
        }
    }